--- a/style.css
+++ b/style.css
@@ -1,4 +1,47 @@
+section {
+    padding-top: 24px;
+}
+
+.btn.button {
+    border: 3px solid black;
+    border-radius: 24px;
+}
+
+.btn.button:hover {
+    border: 3px solid black;
+    background-color: black;
+    color: white;
+}
+
 .navbar {
     background-color: white;
     box-shadow: 0px 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.home h1 {
+    font-size: 72px;
+}
+
+.home h3 {
+    font-size: 48px;
+}
+
+.home .arrow img {
+    width: 90px;
+}
+
+#arrow {
+    animation: upDown 2s infinite;
+}
+
+@keyframes upDown {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
 }
