--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
-section {
+.home {
     padding-top: 24px;
+}
+
+section {
+    padding-top: 128px;
+    position: relative;
+}
+
+section::before {
+    z-index: -1;
+    content: '';
+    font-size: 72px;
+    color: gray;
+    opacity: 0.25;
+    position: absolute;
+    font-weight: 700;
+    top: 20px;
+    left: -30px;
 }
 
 .btn.button {
@@ -7,7 +24,7 @@ section {
     border-radius: 24px;
 }
 
-.btn.button:hover {
+.btn.button:hover, .btn.button.active {
     border: 3px solid black;
     background-color: black;
     color: white;
@@ -27,11 +44,29 @@ section {
 }
 
 .home .arrow img {
-    width: 90px;
+    width: 80px;
 }
 
 #arrow {
     animation: upDown 2s infinite;
+}
+
+.about::before {
+    content: 'About';
+}
+
+.about-exp-item {
+    margin-top: 24px;
+}
+
+.about-exp-item-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-exp-item-detail {
+    display: none;
 }
 
 @keyframes upDown {
@@ -45,3 +80,4 @@ section {
         transform: translateY(0px);
     }
 }
+
