--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ section::before {
     z-index: -1;
     content: '';
     font-size: 72px;
-    color: gray;
+    color: black;
     opacity: 0.25;
     position: absolute;
     font-weight: 700;
@@ -41,6 +41,10 @@ section::before {
 
 .home h3 {
     font-size: 48px;
+}
+
+.home .col-4 img {
+    width: 100%;
 }
 
 .home .arrow img {
@@ -143,6 +147,19 @@ section::before {
 
 .form-label {
     font-weight: 700;
+}
+
+@media only screen and (max-width: 768px) {
+    .home img {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    section::before {
+        left: -10px;
+        font-size: 64px;
+    }
 }
 
 @keyframes upDown {
